--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">DocNumGen</string>
     <string name="action_settings">Settings</string>
     <string name="detail_toolbar">Detail</string>
+    <string name="detail_menu_pin">PIN</string>
     <string name="detail_copy">COPY</string>
     <string name="detail_refresh">REFRESH</string>
 </resources>
